Gem name change to rbtelldus
Change-Id: I94aa94d7b5764b3e845934afbec7eefbf46be782

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_deploy:
 deploy:
   provider: rubygems
   api_key: $RUBYGEMS_KEY
-  gem: rtelldus
+  gem: rbtelldus
   on:
     tags: true
     repo: kaffepanna/rtelldus
