--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: ruby
 rvm:
-- 1.9.3
-- '2.1'
-- '2.2'
+  - 1.9.3
+  - '2.1'
+  - '2.2'
 script: bundle exec rake test
 before_deploy:
-- bundle exec rake build
-- export GEM_FILE="$(ls -1 pkg/*.gem | tail -n1)"
+  - bundle exec rake gem:build
+  - export GEM_FILE="$(ls -1 pkg/*.gem | tail -n1)"
 deploy:
   - provider: rubygems
     api_key: $RUBYGEMS_KEY
